--- a/templates/pages/error-page.html
+++ b/templates/pages/error-page.html
@@ -1,7 +1,10 @@
-<!--{% extends 'layout/base.html' %} {% set page = "error" %} {% block content %} -->
-<h1 class="hiddem">Error 404</h1>
-<img src="/static/images/Errors/Error-404.jpg" alt="error-page-image" class="error-page-image">
-<h2 class="error-title">
-    <span class="error-grats">Grats.</span> You broke it.<br>This page doesn't exist or some other horrible error has occured.
-</h2>
+{% extends 'layout/base.html' %} {% set page = "error" %} {% block content %}
+<div class="container error-page-main">
+    <h1 class="hidden">Error 404</h1>
+    <img src="/static/images/errors/Error-404.png" alt="error-page-image" class="error-page-image">
+    <h2 class="error-title">
+        <span class="error-grats">Grats.</span> You broke it.<br>
+        <p>This page doesn't exist or some other horrible error has occured.</p>
+    </h2>
+</div>
 {% endblock %}
