--- a/static/css/style.css
+++ b/static/css/style.css
@@ -885,13 +885,19 @@ form p {
   padding-top: 10px;
 }
 
-.error-page-mani {
-  padding-top: 60px;
+#error-page .error-page-main {
+  height: 100vh;
+  max-height: calc(100% - 360px);
+  padding-top: 2rem;
+}
+#error-page footer {
+  position: fixed;
+  bottom: 0;
 }
 
 .error-page-image {
-  width: 320px;
-  height: 200px;
+  width: 640px;
+  height: 400px;
 }
 
 .error-title {
