--- a/templates/pages/error-page.html
+++ b/templates/pages/error-page.html
@@ -1,6 +1,11 @@
-{% extends 'layout/base.html' %} {% set page = "error" %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "error-page" %} {% block content %}
 <div class="container error-page-main">
     <h1 class="hidden">Error 404</h1>
+    {% if error_type !='' %}
+    <h2 class="page-title">404</h2>
+    {% else %}
+    <h2 class="page-title">500</h2> 
+    {% endif %}
     <img src="/static/images/errors/Error-404.png" alt="error-page-image" class="error-page-image">
     <h2 class="error-title">
         <span class="error-grats">Grats.</span> You broke it.<br>
