--- a/static/css/style.css
+++ b/static/css/style.css
@@ -885,19 +885,40 @@ form p {
   padding-top: 10px;
 }
 
-#error-page .error-page-main {
-  height: 100vh;
-  max-height: calc(100% - 360px);
-  padding-top: 2rem;
+.error-page-main {
+  padding-top: 4rem;
 }
-#error-page footer {
-  position: fixed;
-  bottom: 0;
+
+@media screen and (min-height: 983px) and (min-width: 1020px) {
+  #error-page {
+    height: calc(100% - 360px);
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+  }
+}
+.error-box {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  padding: 0.5rem 2rem;
+}
+
+.error-page-title {
+  text-align: center;
+  font-size: 124px;
+  font-weight: 700;
+  color: #FF3377;
 }
 
 .error-page-image {
-  width: 640px;
-  height: 400px;
+  width: 100%;
+  max-width: 320px;
+  height: 100%;
+  max-height: 200px;
 }
 
 .error-title {
