Error page footer style quick fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -893,8 +893,7 @@ form p {
   #error-page {
     height: calc(100% - 360px);
   }
-
-  footer {
+  #error-page footer {
     position: fixed;
     bottom: 0;
   }
