Quick fix - navigation active page link style issue solved

--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{{url_for('recipes')}}" class="{{ 'active-link' if page == 'recipes' else 'hvr-underline-from-left'}}">Recipes</a></li>
         <li><a href="{{url_for('favourites')}}" class="{{ 'active-link' if page == 'favourites' else 'hvr-underline-from-left'}}"><i class="far fa-heart fav-heart-icon"></i>Favourites</a></li>
-        <li><a href="{{url_for('about')}}" class="{{ 'active-link' if page == 'top-hundred' else 'hvr-underline-from-left'}}">About</a></li>
+        <li><a href="{{url_for('about')}}" class="{{ 'active-link' if page == 'about' else 'hvr-underline-from-left'}}">About</a></li>
         <li><a href="{{url_for('contact')}}" class="{{ 'active-link' if page == 'contact' else 'hvr-underline-from-left'}}">Contact</a></li>
       </ul>
       <!-- search and login links -->
