--- a/templates/pages/favourites.html
+++ b/templates/pages/favourites.html
@@ -1,3 +1,3 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "favourites" %}{% block content %}
 <h1 class="hidden">Favourites</h1>
 {% endblock %}
