--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,34 @@ h4 {
   padding: 1.25rem 0 1.25rem 0;
   font-weight: 400;
 }
+.navbar li .active-link {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  overflow: hidden;
+  margin-left: 0.9375rem;
+  padding: 1.25rem 0 1.25rem 0;
+  font-weight: 400;
+}
+.navbar li .active-link:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 15px;
+  background: #FF3366 !important;
+  height: 2px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
 
 .hvr-underline-from-left:before {
   bottom: 0.9375rem;
