--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "about" %}{% block content %}
 <div class="container about-main-container">
     <h2 class="page-title">About Baking Master</h2>
     <div class="about">
