--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,12 +126,6 @@ h4 {
   bottom: 15px;
   background: #FF3366 !important;
   height: 2px;
-  -webkit-transition-property: right;
-  transition-property: right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
 }
 
 .hvr-underline-from-left:before {
@@ -191,7 +185,18 @@ h4 {
 .navbar-inverse .navbar-form a {
     padding-top: 0.9375rem;
     padding-bottom: 0.9375rem;
-    widtH: 150px;
+    widtH: 100px;
+  }
+  .navbar-inverse .navbar-collapse .active-link:before,
+.navbar-inverse .navbar-form .active-link:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    bottom: 10px;
+    background: #FFF !important;
+    height: 2px;
   }
 
   .navbar li a {
@@ -458,7 +463,7 @@ form p {
 }
 
 .recovery-form {
-  padding-top: 110px;
+  padding-top: 100px;
 }
 
 .main-form-container {
@@ -787,7 +792,7 @@ form p {
     bottom: 0;
   }
 }
-@media screen and (min-height: 850px) and (min-width: 1020px) {
+@media screen and (min-height: 1000px) and (min-width: 1020px) {
   #recovery-page .main-container {
     height: calc(100% - 360px);
     padding-top: 2rem;
