--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -24,7 +24,11 @@
       <!-- search and login links -->
       <ul class="nav navbar-nav navbar-right">
         {% if session['email']%}
-          <li><a href="{{url_for('index')}}" class="{{ 'active-link' if page == 'account' else 'hvr-underline-from-left'}}">Account</a></li>
+          <li><a href="{{url_for('account')}}" class="{{ 'active-link' if page == 'account' else 'hvr-underline-from-left'}}">Account</a></li>
+          <li><a href="{{url_for('add_recipe')}}" class="{{ 'active-link' if page == 'add-recipe' else 'hvr-underline-from-left'}}">Add Recipe</a></li>
+          <li><a href="{{url_for('edit_recipe')}}" class="{{ 'active-link' if page == 'edit_recipe' else 'hvr-underline-from-left'}}">Edit Recipe</a></li>
+          <li><a href="{{url_for('your_recipes')}}" class="{{ 'active-link' if page == 'your_recipes' else 'hvr-underline-from-left'}}">Your Recipes</a></li>
+          <li><a href="{{url_for('favourites')}}" class="{{ 'active-link' if page == 'favourites' else 'hvr-underline-from-left'}}">Favourites</a></li>
           <li><a href="{{url_for('logout')}}" class="{{ 'active-link' if page == 'logout' else 'hvr-underline-from-left'}}">Logout</a></li>
         {% else %}
           <li><a href="{{url_for('register')}}" class="{{ 'active-link' if page == 'register' else 'hvr-underline-from-left'}}">Register</a></li>
