--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -9,13 +9,12 @@
         {% else %}
         <h3 class="welcome-lead">Hi! It's nice to see you again.</h3>
         {% endif %}
-        <h4>User Menu:</h4>
         <ul>
+            <li><a href="">Account</a></li>
             <li><a href="">Add Recipe</a></li>
             <li><a href="">Edit Recpie</a></li>
             <li><a href="">Your Recipes</a></li>
             <li><a href=""><i class="far fa-heart fav-heart-icon"></i>Favourites</a></li>
-            <li class="delete-account"><a href="">Delete Account</a></li>
         </ul>
     </div>
 </div>
