--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -22,7 +22,6 @@
             vertical-align: middle;
             -webkit-transform: perspective(1px) translateZ(0);
             transform: perspective(1px) translateZ(0);
-            box-shadow: 0 0 1px transparent;
             position: relative;
             overflow: hidden;
             margin-left: 0.9375rem;
@@ -88,6 +87,77 @@
 .fav-heart-icon {
     margin-right: 5px;
 }
+
+.dropdown-menu {
+    margin: 0;
+    padding: 0;
+    min-width: 150px;
+    background: #FFF;
+    display: none;
+    position: absolute;
+    z-index: 999;
+    left: 0;
+
+    .hvr-underline-from-left:before {
+        bottom: 10px !important;
+    }
+
+    li {
+        a {
+            width: 100px;
+            padding: 0.75rem 0;
+
+            &:hover {
+                background-color: #fff;
+            }
+        }
+        .user-menu-logout {
+            color: #a3a3a3 !important;
+            display: inline-block;
+            vertical-align: middle;
+            -webkit-transform: perspective(1px) translateZ(0);
+            transform: perspective(1px) translateZ(0);
+            box-shadow: 0 0 1px transparent;
+            position: relative;
+            overflow: hidden
+        }
+
+        .user-menu-logout:before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            right: 100%;
+            bottom: 10px;
+            background: #a3a3a3;
+            height: 2px;
+            -webkit-transition-property: right;
+            transition-property: right;
+            -webkit-transition-duration: .3s;
+            transition-duration: .3s;
+            -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out
+        }
+
+        .user-menu-logout:active:before,
+        .user-menu-logoutt:focus:before,
+        .user-menu-logout:hover:before {
+            right: 0
+        }
+    }
+}
+
+ul li:hover ul.dropdown-menu {
+    top: 57px;
+    display: block;
+    border: none;
+    border-radius: none;
+
+    .menu-hr {
+        margin: 0;
+    }
+}
+
 
 @media (max-width: 991.98px) {
     .navbar-brand {
