--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,5 +31,5 @@
 @import 'page-styles/register.scss';
 @import 'page-styles/search-result.scss';
 @import 'page-styles/landing-page.scss';
-@import 'page-styles/account.scss';
+@import 'page-styles/user-menu.scss';
 @import 'page-styles/error-page.scss';
