--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,58 +1,48 @@
-{% extends 'layout/base.html' %} {% set page = "account" %} {% block content %}
-<div class="container account-main-container">
-    <h1 class="hidden">Account Page</h1>
-    <!-- welcme text -->
-    <div class="account">
-        {% if username !='' %}
-        <h3 class="welcome-lead">Hi
-            <span>{{session['name']}}</span> ,it's time to bake something amazing!
-        </h3>
-        {% else %}
-        <h3 class="welcome-lead">Hi! It's nice to see you again.</h3>
-        {% endif %}
-        <!-- user menu in blocks -->
-        <div class="container menu-blocks">
-            <row class="col-lg-12">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+{% extends 'layout/base.html' %} {% set page = "user-menu" %} {% block content %}
+<div class="container">
+    <h1 class="hidden">User menu</h1>
+    <!-- user menu in blocks -->
+    <div class="container menu-blocks">
+        <row class="col-lg-12">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{url_for('account')}}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Yor Account</p>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{url_for('add_recipe')}}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Add Recipe</p>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{url_for('edit_recipe')}}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Edit Recipe</p>
                 </div>
-            </row>
-            <row class="col-lg-12">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+            </div>
+        </row>
+        <row class="col-lg-12">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{url_for('your_recipes')}}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Your Recipes</p>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{url_for('favourites')}}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text"><i class="far fa-heart fav-heart-icon"></i>Favourites</p>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{url_for('logout')}}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Logout</p>
                 </div>
-            </row>
-        </div>
+            </div>
+        </row>
     </div>
 </div>
 {% endblock %}
