User menu blocks basic style applied

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,46 +1,30 @@
 {% extends 'layout/base.html' %} {% set page = "user-menu" %} {% block content %}
-<div class="container">
+<div class="container main-user-block-container">
     <h1 class="hidden">User menu</h1>
     <!-- user menu in blocks -->
     <div class="container menu-blocks">
-        <row class="col-lg-12">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{url_for('account')}}" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text">Yor Account</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{url_for('add_recipe')}}" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text">Add Recipe</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{url_for('edit_recipe')}}" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text">Edit Recipe</p>
-                </div>
+        <row class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="col-sm-12">
+                <a href="{{url_for('account')}}" class="">
+                    <div class="card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/user.png" alt="account-link-photo">
+                        <div class="card-body">
+                            <p class="card-text">Account</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </row>
-        <row class="col-lg-12">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{url_for('your_recipes')}}" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text">Your Recipes</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{url_for('favourites')}}" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text"><i class="far fa-heart fav-heart-icon"></i>Favourites</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{url_for('logout')}}" alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text">Logout</p>
-                </div>
+        <row class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+            <div class="col-sm-12">
+                <a href="{{url_for('logout')}}" class="">
+                    <div class="card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/log-out.png" alt="log-out-link-photo">
+                        <div class="card-body">
+                            <p class="card-text">Lgout</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </row>
     </div>
