--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1028,4 +1028,14 @@ form p {
   font-size: 12px;
 }
 
+.main-user-block-container {
+  padding-top: 60px;
+}
+
+.menu-blocks {
+  display: flex;
+  padding: 0.5rem 1rem;
+  flex-direction: column;
+}
+
 /*# sourceMappingURL=style.css.map */
