--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1034,8 +1034,40 @@ form p {
 
 .menu-blocks {
   display: flex;
+  justify-content: center;
   padding: 0.5rem 1rem;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+}
+.menu-blocks a:hover {
+  text-decoration: none;
+}
+
+.menu-block-card {
+  padding: 1.5rem 2rem;
+  display: flex;
   flex-direction: column;
+  color: #FF3377;
+  border-radius: 25px;
+  border: 5px solid #FF3377;
+  max-width: 300px;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+.menu-block-card img {
+  margin: 0 auto;
+}
+
+.card-img-top {
+  width: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.card-text {
+  margin: 0;
+  padding: 0;
+  padding-top: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
