--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,12 +4,53 @@
     <!-- user menu in blocks -->
     <div class="container menu-blocks">
         <row class="container">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <a href="{{url_for('your_recipes')}}" class="card-shadow">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+                <a href="{{url_for('account')}}">
+                    <div class="menu-block-card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/account.png" alt="account-link-photo">
+                        <p class="card-text">Account</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+                <a href="{{url_for('add_recipe')}}">
+                    <div class="menu-block-card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/add-recipe.png" alt="add-recipie-link-photo">
+                        <p class="card-text">Add Recipes</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+                <a href="{{url_for('edit_recipe')}}">
+                    <div class="menu-block-card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/edit-recipe.png" alt="edit-recipe-link-photo">
+                        <p class="card-text">Edit Recipe</p>
+                    </div>
+                </a>
+            </div>
+        </row>
+        <row class="container">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+                <a href="{{url_for('your_recipes')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/your-recipes.png" alt="your-recipes-link-photo">
-                            <p class="card-text">Your Recipes</p>
-                        </div>
+                        <p class="card-text">Your Recipes</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+                <a href="{{url_for('favourites')}}">
+                    <div class="menu-block-card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/favourites.png" alt="favourites-link-photo">
+                        <p class="card-text"><i class="far fa-heart fav-heart-icon"></i>Favourites</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+                <a href="{{url_for('logout')}}">
+                    <div class="menu-block-card">
+                        <img class="card-img-top" src="/static/images/user-menu-blocks/logout.png" alt="logout-link-photo">
+                        <p class="card-text">Logout</p>
                     </div>
                 </a>
             </div>
