--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1035,6 +1035,7 @@ form p {
 .menu-blocks {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   padding: 0.5rem 1rem;
   text-align: center;
   font-size: 18px;
@@ -1044,14 +1045,18 @@ form p {
   text-decoration: none;
 }
 
+.main-card {
+  margin: 20px 0 20px 0;
+}
+
 .menu-block-card {
-  padding: 1.5rem 2rem;
+  padding: 2rem 2rem;
   display: flex;
   flex-direction: column;
-  color: #FF3377;
+  color: #000;
   border-radius: 25px;
-  border: 5px solid #FF3377;
-  max-width: 300px;
+  border: 2px solid #FF3377;
+  max-width: 250px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 .menu-block-card img {
@@ -1059,7 +1064,7 @@ form p {
 }
 
 .card-img-top {
-  width: 100px;
+  width: 80px;
   display: flex;
   justify-content: center;
 }
