--- a/scss/page-styles/user-menu-blocks.scss
+++ b/scss/page-styles/user-menu-blocks.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     padding: 0.5rem 1rem;
     text-align: center;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 400;
 
     a:hover {
@@ -17,11 +17,11 @@
 }
 
 .main-card {
-    margin: 20px 0 20px 0;
+    margin: 10px 0 10px 0;
 }
 
 .menu-block-card {
-    padding: 2rem 2rem;
+    padding: 2rem 0.5rem;
     display: flex;
     flex-direction: column;
     color: #000;
