--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,8 +3,8 @@
     <h1 class="hidden">User menu</h1>
     <!-- user menu in blocks -->
     <div class="container menu-blocks">
-        <row class="container">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('account')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/account.png" alt="account-link-photo">
@@ -12,7 +12,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('add_recipe')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/add-recipe.png" alt="add-recipie-link-photo">
@@ -20,7 +20,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('edit_recipe')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/edit-recipe.png" alt="edit-recipe-link-photo">
@@ -28,9 +28,7 @@
                     </div>
                 </a>
             </div>
-        </row>
-        <row class="container">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('your_recipes')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/your-recipes.png" alt="your-recipes-link-photo">
@@ -38,15 +36,15 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('favourites')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/favourites.png" alt="favourites-link-photo">
-                        <p class="card-text"><i class="far fa-heart fav-heart-icon"></i>Favourites</p>
+                        <p class="card-text"></i>Favourites</p>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 main-card">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('logout')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/logout.png" alt="logout-link-photo">
@@ -54,7 +52,7 @@
                     </div>
                 </a>
             </div>
-        </row>
+        </div>
     </div>
 </div>
 {% endblock %}
