User menu blocks hover style applied

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,7 @@
 <div class="container main-user-block-container">
     <h1 class="hidden">User menu</h1>
     <!-- user menu in blocks -->
-    <div class="container menu-blocks">
+    <div class="menu-blocks">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('account')}}">
