--- a/scss/page-styles/user-menu-blocks.scss
+++ b/scss/page-styles/user-menu-blocks.scss
@@ -1,5 +1,11 @@
+#user-menu {
+    .row {
+        margin: 0;
+    }
+}
+
 .main-user-block-container {
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 .menu-blocks {
@@ -27,11 +33,15 @@
     color: #000;
     border-radius: 25px;
     border: 2px solid #FF3377;
-    max-width: 250px;
-    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    height: 200px;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
 
     img {
         margin: 0 auto;
+    }
+    
+    &:hover {
+            box-shadow: 0 5px 7px 0 rgba(255,51,119, 0.25), 0 5px 5px 0 rgba(255,51,119, 0.25);
     }
 }
 
@@ -45,4 +55,21 @@
     margin: 0;
     padding: 0;
     padding-top: 15px;
+}
+
+$a: 100%;
+$b: 450px;
+@media screen and (min-height: 1050px) {
+    @media screen and (min-width: 1020px) {
+        #user-menu {
+            .main-container {
+                height: calc(#{$a} - #{$b});
+                padding-top: 2rem;
+            }
+            footer {
+                position: fixed;
+                bottom: 0;
+            }
+        }
+    }
 }
