--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,8 +134,7 @@ h4 {
 }
 
 .navbar-brand {
-  margin-left: 0 !important;
-  padding: 8px;
+  padding: 8px 15px;
 }
 
 .logotype {
@@ -1028,8 +1027,12 @@ form p {
   font-size: 12px;
 }
 
+#user-menu .row {
+  margin: 0;
+}
+
 .main-user-block-container {
-  padding-top: 60px;
+  padding-top: 80px;
 }
 
 .menu-blocks {
@@ -1056,11 +1059,14 @@ form p {
   color: #000;
   border-radius: 25px;
   border: 2px solid #FF3377;
-  max-width: 250px;
-  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  height: 200px;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
 }
 .menu-block-card img {
   margin: 0 auto;
+}
+.menu-block-card:hover {
+  box-shadow: 0 5px 7px 0 rgba(255, 51, 119, 0.25), 0 5px 5px 0 rgba(255, 51, 119, 0.25);
 }
 
 .card-img-top {
@@ -1073,6 +1079,17 @@ form p {
   margin: 0;
   padding: 0;
   padding-top: 15px;
+}
+
+@media screen and (min-height: 1050px) and (min-width: 1020px) {
+  #user-menu .main-container {
+    height: calc(100% - 450px);
+    padding-top: 2rem;
+  }
+  #user-menu footer {
+    position: fixed;
+    bottom: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
