Link spelling correctiong

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -16,7 +16,7 @@
                 <a href="{{url_for('add_recipe')}}">
                     <div class="menu-block-card">
                         <img class="card-img-top" src="/static/images/user-menu-blocks/add-recipe.png" alt="add-recipie-link-photo">
-                        <p class="card-text">Add Recipes</p>
+                        <p class="card-text">Add Recipe</p>
                     </div>
                 </a>
             </div>
