--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -3,8 +3,8 @@
     <h1 class="hidden">User menu</h1>
     <!-- welcme text -->
     <div class="account">
-        <div class="account-info">
-            <h3 class="welcome-lead">Welcome back!</h3>
+        <div class="row account-info">
+            <h4 class="welcome-lead">Welcome back!</h4>
             <div class="user-info">
                 <h4 class="info-label">Name</h4>
                 <span class="user-name">{{session['name']}}</span>
@@ -13,9 +13,22 @@
                 <h4 class="info-label">E-mail address</h4>
                 <span class="user-email">{{session['email']}}</span>
             </div>
+            <div class="remove-account">
+                <button class="remove-button">
+                        <a href="{{url_for('remove_account')}}">Remove Account</a>
+                    </button>
+            </div>
         </div>
-        <div class="recipe-info">
-            
+        <div class="row recipe-information">
+            <h4 class="welcome-lead">Recipes information</h4>
+            <div class="recipe-info">
+                <h4 class="info-label">Number of your recipes</h4>
+                <span class="recipe-count"><!--user-recpies-count-->54</span>
+            </div>
+            <div class="recipe-info">
+                <h4 class="info-label">Number of your favourites recpies</h4>
+                <span class="recipe-count"><!--user-favourites-count-->100</span>
+            </div>
         </div>
     </div>
 </div>
