User and recipe section basic style added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,12 +25,11 @@
 @import 'page-styles/contact.scss';
 @import 'page-styles/favourites.scss';
 @import 'page-styles/login.scss';
-@import 'page-styles/my-account.scss';
+@import 'page-styles/account.scss';
 @import 'page-styles/recipes.scss'; 
 @import 'page-styles/recovery.scss';
 @import 'page-styles/register.scss';
-@import 'page-styles/search-result.scss';
 @import 'page-styles/landing-page.scss';
 @import 'page-styles/user-menu.scss';
-@import 'page-styles/error-page.scss';
 @import 'page-styles/user-menu-blocks.scss';
+@import 'page-styles/error-page.scss';
