--- a/static/css/style.css
+++ b/static/css/style.css
@@ -852,6 +852,10 @@ form p {
     bottom: 0;
   }
 }
+.account-main-container {
+  display: flex;
+}
+
 @media screen and (min-height: 1000px) and (min-width: 1020px) {
   #recovery-page .main-container {
     height: calc(100% - 360px);
@@ -978,55 +982,6 @@ form p {
   padding-top: 10px;
 }
 
-.error-page-main {
-  padding-top: 4rem;
-}
-
-@media screen and (min-height: 983px) and (min-width: 1020px) {
-  #error-page {
-    height: calc(100% - 360px);
-  }
-  #error-page footer {
-    position: fixed;
-    bottom: 0;
-  }
-}
-.error-box {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 0;
-  padding: 0.5rem 2rem;
-}
-
-.error-page-title {
-  text-align: center;
-  font-size: 124px;
-  font-weight: 700;
-  color: #FF3377;
-}
-
-.error-page-image {
-  width: 100%;
-  max-width: 320px;
-  height: 100%;
-  max-height: 200px;
-}
-
-.error-title {
-  font-size: 16px;
-}
-.error-title span {
-  font-size: 18px;
-  color: #FF3377;
-}
-.error-title p {
-  padding-top: 5px;
-  font-weight: 300;
-  color: #a1a1a1;
-  font-size: 12px;
-}
-
 #user-menu .row {
   margin: 0;
 }
@@ -1090,6 +1045,54 @@ form p {
     position: fixed;
     bottom: 0;
   }
+}
+.error-page-main {
+  padding-top: 4rem;
+}
+
+@media screen and (min-height: 983px) and (min-width: 1020px) {
+  #error-page {
+    height: calc(100% - 360px);
+  }
+  #error-page footer {
+    position: fixed;
+    bottom: 0;
+  }
+}
+.error-box {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  padding: 0.5rem 2rem;
+}
+
+.error-page-title {
+  text-align: center;
+  font-size: 124px;
+  font-weight: 700;
+  color: #FF3377;
+}
+
+.error-page-image {
+  width: 100%;
+  max-width: 320px;
+  height: 100%;
+  max-height: 200px;
+}
+
+.error-title {
+  font-size: 16px;
+}
+.error-title span {
+  font-size: 18px;
+  color: #FF3377;
+}
+.error-title p {
+  padding-top: 5px;
+  font-weight: 300;
+  color: #a1a1a1;
+  font-size: 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
