--- a/templates/pages/landing-page.html
+++ b/templates/pages/landing-page.html
@@ -1,5 +1,13 @@
 {% extends 'layout/base.html' %} {% set page = "landin-page" %} {% block content %}
 <h1 class="hidden">Home page</h1>
+<!-- Show flash message when user account was removed -->
+{% with errors = get_flashed_messages(category_filter=["account-removed"]) %} {% if errors %}
+<div id="flash-message" class="flash-register-added">
+    {%- for msg in errors %}
+    <p>{{ msg }}</p>
+    {% endfor -%}
+</div>
+{% endif %} {% endwith %}
 <!-- Include carousel -->
 {% include 'components/carousel/carousel.html' %}
 <div class="container landing-page-main">
@@ -47,7 +55,8 @@
     </div>
     <div class="bottom-landing-page">
         <p class="page-title lead-landing">Now, when you met these fantastic people, don't waste your time!</br>
-            Search through recipes and bake something.</br></p>
+            Search through recipes and bake something.</br>
+        </p>
         <p class="lead">Remember, never give up! Especially when you are starting new beautiful adventure with baking.</p>
     </div>
 </div>
