--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -1,8 +1,28 @@
 .account-main-container {
     display: flex;
-    
+
 }
 
 .account-info {}
 
 .recipe-information {}
+
+.account-removed {
+    display: visible;
+    padding-top: 60px;
+    height: auto;
+    width: 100%;
+    border: 1px solid #FF3366;
+    background-color: rgba(255, 172, 193, 0.6);
+    border-radius: 5px;
+    text-align: left;
+
+    p {
+        margin: 0;
+        padding: 0.5rem;
+        font-size: 0.85rem;
+        font-weight: 400;
+        color: #5aac17;
+        color: #FF3366;
+    }
+}
