--- a/static/css/style.css
+++ b/static/css/style.css
@@ -856,6 +856,27 @@ form p {
   display: flex;
 }
 
+.remove-account {
+  padding-top: 20px;
+}
+
+.remove-button {
+  width: 150px;
+}
+.remove-button a {
+  text-decoration: none;
+  color: inherit;
+}
+.remove-button a:hover {
+  color: #FFF;
+}
+
+.before-remove {
+  padding-top: 5px;
+  font-size: 12px;
+  color: red;
+}
+
 .account-removed {
   display: flex;
   align-items: center;
