--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -1,19 +1,31 @@
 .account-main-container {
-    display: flex;
-
 }
 
-.account-info {}
+.welcome-lead {
+    color: #000;
+}
 
-.recipe-information {}
+.details-list{
+    padding-top: 10px;
+}
+
+.info-label {
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.info-label-result {
+    margin-top: 10px;
+    font-size: 14px;
+}
 
 .remove-account {
-    padding-top: 20px;
+    padding-top: 40px;
 }
 
 .remove-button {
     width: 150px;
-    
+
     a {
         text-decoration: none;
         color: inherit;
@@ -24,8 +36,8 @@
 }
 
 .before-remove {
-    padding-top: 5px;
-    font-size: 12px;
+    padding-top: 10px;
+    font-size: 10px;
     color: red;
 }
 
@@ -47,5 +59,16 @@
         font-weight: 400;
         color: #5aac17;
         color: #FF3366;
+    }
+}
+
+
+@media (max-width: 350px)
+{
+    .xSmall{
+        width: 100%
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
