--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -66,7 +66,7 @@
 @media (max-width: 350px)
 {
     .xSmall{
-        width: 100%
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
