--- a/scss/page-styles/landing-page.scss
+++ b/scss/page-styles/landing-page.scss
@@ -5,6 +5,7 @@
 }
 
 .featurette {
+    width: 100%;
     padding-top: 40px;
     display: flex;
     padding: 0.5rem 1rem;
@@ -22,6 +23,7 @@
 .chef-photo {
     display: inherit;
     justify-content: center;
+    text-align: center;
     padding-top: 10px;
     img {
         width: 150px;
@@ -44,6 +46,10 @@
 
 @media screen and (max-width: 768px) {
     #home-page {
+        .row {
+            margin-left: 0;
+            margin-right: 0;
+        }
         .featurette {
             flex-direction: column;
             text-align: center;
