--- a/scss/page-styles/landing-page.scss
+++ b/scss/page-styles/landing-page.scss
@@ -47,8 +47,8 @@
 @media screen and (max-width: 768px) {
     #home-page {
         .row {
-            margin-left: 0;
-            margin-right: 0;
+            margin-left: 0 !important;
+            margin-right: 0 !important;
         }
         .featurette {
             flex-direction: column;
