--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -1,6 +1,86 @@
-.card-main {
-    width: 300px;
-    height: 200px;
-    border: 1px solid black;
+.card {
+    border-radius: 25px;
+    max-width: 250px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    $border: 5px;
+    color: #000;
+    background: #FFF;
+    background-clip: padding-box;
+    /* !importanté */
+    border: solid $border transparent;
+    /* !importanté */
+    border-radius: 1.5em;
 
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        margin: -$border;
+        border-radius: inherit;
+        background: linear-gradient(to top, #51ACEA, #C471EB);
+        box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+    }
+}
+
+.card-image {
+    width: 240px;
+    height: 150px;
+    border-radius: 19px 19px 0 0;
+    margin-top: -8px;
+
+    .card-img-top {
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+    }
+}
+
+.card-top-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-title {
+    color: #FF3377;
+    font-size: 16px;
+}
+
+.card-fav-icon {
+    i {
+        font-size: 18px;
+        color: #FF3377;
+        text-decoration: none;
+        padding-top: 8px;
+    }
+}
+
+.card-text {
+    padding-top: 10px !important;
+    max-height: 70px;
+    position: relative;
+    overflow: hidden;
+    word-wrap: break-word;
+    white-space: pre;
+}
+
+.card-body {
+    padding: 0.5rem 1rem !important;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-read-more {
+    margin-top: 16px;
+    text-align: right;
+    color: #51ACEA;
+
+    &:hover {
+        color: #C471EB;
+    }
 }
