--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -1,13 +1,19 @@
 <!-- main card container -->
-<div class="card-main">
-    <!-- card top photo -->
-    <!--img src="/static/images/test_photo_recipe.png" alt="recipe-image"></img-->
-    <!-- card main title -->
-    <h4 class="card-title">Test title</h4>
-    <!-- short recipe description (max 10-20 words) -->
-    <p class="short-desc">whatever you wann say in few senteces</p>
-    <!-- add favourite button -->
-    <a href="{{url_for('add)}}"><i class="far fa-heart fav-heart-icon"></a>
-    <!-- bottom coloured stripe -->
-    <div class=""></div>
+<div class="col-md-3 col-sm-4 col-xs-6 card">
+    <!-- card image container -->
+    <div class="card-image">
+        <!-- image source from database -->
+        <img class="card-img-top" src="{{search_recipe_img}}" alt="{{saerch_recipe_title}}">
+    </div>
+    <!-- card body container -->
+    <div class="card-body">
+        <!-- card top section -->
+        <div class="card-top-section">
+            <h5 class="card-title">{{saerch_recipe_title}}</h5>
+            <a href="{{add_to_favourites}}" class="card-fav-icon"><i class="far fa-heart"></i></a>
+        </div>
+        <!-- card bottom section -->
+        <p class="card-text">{{search_recipe_desc}}</p>
+        <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
+    </div>
 </div>
