--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -3,8 +3,11 @@
 <!-- Include carousel -->
 {% include 'components/carousel/carousel.html' %}
 <div class="container search-container">
-    {% include 'components/cards/recipe-card.html' %}
+    <div class="search-box"></div>
+    <div class="card-results">
+        {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {%
+        include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %}
+    </div>
 </div>
-
 
 {% endblock %}
