--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -1,6 +1,7 @@
 .card {
     border-radius: 25px;
-    max-width: 250px;
+    max-width: 225px;
+    margin-right: 10px;
     margin-bottom: 20px; 
     display: flex;
     flex-direction: column;
